@@ -12,6 +12,11 @@ What's New in Python 3.2 Alpha 1?
 Core and Builtins
 -----------------
 
+- Issue #8715: Create PyUnicode_EncodeFSDefault() function: Encode a Unicode
+  object to Py_FileSystemDefaultEncoding with the "surrogateescape" error
+  handler, return a bytes object. If Py_FileSystemDefaultEncoding is not set,
+  fall back to UTF-8.
+
 - Enable shortcuts for common encodings in PyUnicode_AsEncodedString() for any
   error handler, not only the default error handler (strict)
 
